plugins {
    id 'net.fabricmc.fabric-loom' version '1.17.16'
    id 'maven-publish'
    id 'io.freefair.lombok' version '8.14'
}
version = project.mod_version
group = project.maven_group
base {
    archivesName = project.archives_base_name
}
repositories {
    maven { url 'https://jitpack.io' }
    maven {
        name = "Terraformers"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
}
dependencies {
    // To change the versions see the gradle.properties file
    minecraft "net.minecraft:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    // Fabric API. This is technically optional, but you probably want it anyway.
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    implementation(include("de.javagl:obj:0.4.0"))
    // For debugging exported replays
    implementation 'com.github.Igrium:CraftUI:26.2-SNAPSHOT'
//    modCompileOnly "com.github.igrium:craftui:db770015ca"
    implementation "maven.modrinth:replaymod:${replaymod_version}"
}
processResources {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}
tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}
java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}
jar {
    inputs.property "archivesName", project.base.archivesName
    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}"}
    }
}
// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
